# Nginx

nginx_basic_auth/: .htpassw  Dockerfile  default.conf
nginx_basic_auth/html/: index.html
nginx_http2/: Dockerfile  default.conf
nginx_http2/certs/: cert.crt  cert.key
nginx_http_redirect_to_https/: Dockerfile  default.conf
nginx_http_redirect_to_https/certs/: crt.crt  crt.key
nginx_http_redirect_to_https/html/: index.html
nginx_load_balancer/: app1.Dockerfile  app2.Dockerfile  app3.Dockerfile  default.conf  docker-compose.yml  pyproject.toml
nginx_load_balancer/app1/: app.py
nginx_load_balancer/app2/: app.py
nginx_load_balancer/app3/: app.py
nginx_multipage_html/: Dockerfile
nginx_multipage_html/app/: index.html  page1.html  page2.html  page3.html  page4.html
nginx_multipage_html/nginx/: default.conf
nginx_multiple_servers/: Dockerfile
nginx_multiple_servers/server1/: index.html  server1.conf
nginx_multiple_servers/server2/: index.html  page1.html  server2.conf
nginx_multiple_servers/server3/: index.html  page1.html  server3.conf
nginx_reverse_poroxy/: Dockerfile  docker-compose.yml  nginx.conf
nginx_reverse_poroxy/django-app/: Dockerfile  pyproject.toml
nginx_reverse_poroxy/django-app/testpro/testpro/: settings.py  urls.py
nginx_reverse_poroxy/django-app/testpro/testpro/src/: urls.py  views.py
nginx_reverse_poroxy/flask-app/: Dockerfile  app.py
nginx_splited_config_files/: Dockerfile
nginx_ssl/: docker-compose.yml
python_gunicorn/: Dockerfile  docker-compose.yml
simple_nginx_config/: Dockerfile  index.html
(+14 files in other folders)
