[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dima", email = "dmitriy.maksyutenko@alphanavtech.com"},
]
dependencies = [
    "flask==2.0.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
