[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dima", email = "dmitriy.maksyutenko@alphanavtech.com"},
]
dependencies = [
    "django==4.0.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
